fixed Sams image not showing

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -15,8 +15,8 @@ header {
 .title {
     position: absolute;
     text-align: center;
-    top: 8%;
-    font-size: 2.3rem;
+    top: 13%;
+    font-size: 1.3rem;
     padding: 0;
 }
 
@@ -162,14 +162,6 @@ h4 {
     color: black;
 }
 
-
-
-
- @media only screen and (min-width: 340px) {
-     .title {
-         font-size: 2.5rem;
-     }
- }
 
  @media only screen and (min-width: 405px) {
      div {
